--- a/MODULO-CSS/Selectores avanzados/css/style.css
+++ b/MODULO-CSS/Selectores avanzados/css/style.css
@@ -17,6 +17,18 @@
     text-shadow: 5px 5px 5px whitesmoke;
 }
 
+#selectores-tit-scroll{
+    font-size: 80px;
+    color: red;
+    text-align: center;
+    padding: 10px;
+    margin: 30px;
+    font-weight: bolder;
+    text-shadow: 3px 3px 3px black;
+    border: 2px solid black;
+    background-color:lightgoldenrodyellow;
+}
+
 h1::before{
     content: "Ésta es la etiqueta, ";
     margin-left: 30px;
