--- a/MODULO-CSS/Propiedades de fuentes/css/style.css
+++ b/MODULO-CSS/Propiedades de fuentes/css/style.css
@@ -4,13 +4,14 @@
 }
 
 #title-prop{
-    font-size: 30px;
-    font-weight: bolder;
+    font-size: 40px;
     text-align: center;
-    margin: 30px;
+    font-weight: bolder;
+    border: 3px solid black;
+    box-shadow: 2px 2px 2px gray;
     padding: 30px;
-    border: 2px dashed black;
-    background-color: blue;
-    color: aliceblue;
-    text-shadow: 2px 2px 2px black;
+    margin: 20px;
+    text-shadow: 2px 2px 2px red;
+    background-color:royalblue;
 }
+
