--- a/MODULO-CSS/Propiedades de fuentes/css/style.css
+++ b/MODULO-CSS/Propiedades de fuentes/css/style.css
@@ -15,3 +15,26 @@
     background-color:royalblue;
 }
 
+.parrafo{
+    font-size: 30px;
+    text-indent: 20px; /*da sangrpia al texto*/
+    padding: 10px;
+    text-transform:capitalize;
+    white-space: nowrap; /*se sale del contenido de la pagina, realizando un  scroll lateral*/
+    word-spacing: 30px; /*Da espacios entre palabras en los textos seleccionados*/
+    letter-spacing: .7em; /*Espacios entre letras*/
+    text-decoration:underline;
+}
+
+.segundo-titulo{
+    font-size: 30px;
+    font-weight: bolder;
+    text-align: center;
+    border: 3px solid black;
+    background-color: violet;
+    color:black;
+    text-shadow: 2px 2px 2px red;
+    box-shadow: 2px 2px 2px black;
+    padding: 30px;
+    margin: 20px;
+}
