--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Estilos/styles.css
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Estilos/styles.css
@@ -6,13 +6,11 @@ body{
     font-size: 16px;
 }
 
-h1{
+.titulo{
     text-align: center;
-    /* color: red; */
-    font-size: 3.8rem;
-  
+    font-size: 3.8rem;  
 }
 
-span{
+.titulo span{
     font-size: 2rem;
 }
