--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Estilos/styles.css
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Estilos/styles.css
@@ -40,13 +40,20 @@ body{
 
 
 .navegacion-Principal{
-    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
 }
 
 .navegacion-Principal a{
     color: var(--blanco);
     text-decoration: none;
+    font-weight: bold;
+    padding: 1rem;
 }
+
+.navegacion-Principal a:hover{
+    background-color: var(--primario);
+}   
 
 p{
     background: var(--primario);
