--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Estilos/styles.css
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Estilos/styles.css
@@ -11,11 +11,18 @@
 
 html{
     font-size: 62.5%;
-    font-family: 'Krub', sans-serif;
+    box-sizing: border-box;
 }
+
+*,*:before, *:after{
+    box-sizing: inherit;
+}
+
+
 
 body{
     font-size: 16px;
+    font-family: 'Krub', sans-serif;
 }
 
 .contenedor{
@@ -41,7 +48,14 @@ body{
 
 .navegacion-Principal{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+}
+
+@media (min-width: 768px) {
+    .navegacion-Principal{
+        flex-direction: row;
+    }
 }
 
 .navegacion-Principal a{
@@ -53,8 +67,27 @@ body{
 
 .navegacion-Principal a:hover{
     background-color: var(--primario);
+    color: var(--oscuro);
 }   
 
 p{
     background: var(--primario);
 }
+
+.Hero{
+    background-image: url(../imagenes/surtido-escritorio-oficina-plano-tableta-pantalla-vacia_23-2148707960.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    padding: 20px;
+    position: relative;
+}
+
+.contenido-hero{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .6);
+  
+}
+
