posicionando los inputs

--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Estilos/styles.css
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Estilos/styles.css
@@ -5,6 +5,7 @@
     --primario: #ffc107;
     --secundario: #00a797;
     --gris: #757575;
+    --grisClaro: #dfe9f3;
 
     --fuente-principal: 3,8rem;
 }
@@ -23,19 +24,31 @@ html{
 body{
     font-size: 16px;
     font-family: 'Krub', sans-serif;
+    background-image: linear-gradient(to top, var(--grisClaro), #dfe9f3 0%, var(--blanco) 100%);
 }
+
+h1{
+    font-size: 3.8rem; 
+}
+
+h2{
+    font-size: 2.8rem;
+}
+
+h3{
+    font-size: 1.8rem;
+}
+
+h1,h2,h3{
+    text-align: center;
+}
+
 
 .contenedor{
     width: 120rem;
     margin: 0 auto;
 }
 
-
-
-.titulo{
-    text-align: center;
-    font-size: 3.8rem; 
-}
 
 .titulo span{
     font-size: 2rem;
@@ -45,6 +58,24 @@ body{
     background: var(--secundario);
 }
 
+/* utilidades */
+.w-100{
+    width: 100%;
+}
+
+@media (min-width: 768px){
+    .w-100{
+        width: auto;
+    }
+}
+
+.flex{
+    display: flex;
+}
+
+.alinear-derecha{
+    justify-content: flex-end;
+}
 
 .navegacion-Principal{
     display: flex;
@@ -56,6 +87,15 @@ body{
     .navegacion-Principal{
         flex-direction: row;
     }
+}
+
+.sombra{
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0,54);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0,54);
+    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0,54);
+    background-color: var(--blanco);
+    padding: 2rem;
+    border-radius: 1rem;
 }
 
 .navegacion-Principal a{
@@ -81,6 +121,7 @@ p{
     height: 450px;
     padding: 20px;
     position: relative;
+    margin-bottom: 2rem;
 }
 
 .contenido-hero{
@@ -94,3 +135,126 @@ p{
   
 }
 
+.contenido-hero h2,
+.contenido-hero p{
+    color: var(--blanco);
+}
+
+.ubicacion{
+    display: flex;
+    align-items: flex-end;
+}
+
+.boton{
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bolder;
+    border-radius: .5rem;
+    width: 90%;
+    text-align: center;
+    border: none;
+}
+
+@media (min-width : 768px) {
+    .boton{
+        width: auto;
+    }
+}
+
+@media (min-width: 768px){
+    
+    /* servicios */
+    .servicios{
+        display: grid;
+        /* grid-template-columns: 33.3% 33.3% 33.3%; */
+        grid-template-columns: repeat(3,1fr);
+        column-gap: 1rem;
+    }
+}
+
+.boton:hover{
+    cursor: pointer;
+}
+
+.servicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.servicio h3{
+    color: var(--secundario);
+    font-weight: normal;
+}
+
+.servicio p{
+    line-height: 2;
+    text-align: center;
+}
+
+.servicio .iconos{
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/*Contacto*/
+.formulario{
+    background-color: var(--gris);
+    width: min(60rem, 100%);
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset{
+    border: none;
+}
+
+.formulario legend{
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+
+.contenedor-campos{
+
+}
+
+.campo{
+    margin-bottom: 1rem;   
+}
+
+.campo label{
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+
+
+.input-text{
+    /* background-color: red; */
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: 1.5rem;
+}
+
+/* .enviar .boton{
+    width: 100%;
+} */
+
+/* utilidades */
