--- a/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Estilos/styles.css
+++ b/CursoUdemy(DesarrolloWebCompleto - Rehaciendo)/Creando Textos en HTML/Estilos/styles.css
@@ -13,6 +13,7 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box;
+    scroll-snap-type: y mandatory;
 }
 
 *,*:before, *:after{
@@ -181,6 +182,7 @@ p{
     cursor: pointer;
 }
 
+
 .servicio{
     display: flex;
     flex-direction: column;
@@ -228,9 +230,21 @@ p{
     color: var(--primario);
 }
 
-.contenedor-campos{
+@media (min-width: 768px ){
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto, auto, 20rem;
+        column-gap: 1rem;
+    }
 
+    .campo:nth-child(3),
+    .campo:nth-child(4){
+        grid-column: 1/3;
+    }
 }
+    
+
 
 .campo{
     margin-bottom: 1rem;   
@@ -243,7 +257,9 @@ p{
     display: block;
 }
 
-
+.campo textarea{
+    height: 20rem;
+}
 
 .input-text{
     /* background-color: red; */
@@ -253,8 +269,7 @@ p{
     border-radius: 1.5rem;
 }
 
-/* .enviar .boton{
-    width: 100%;
-} */
-
-/* utilidades */
+/*Footer  */
+.footer{
+    text-align: center;
+}
