Introduccion a BEM - Modificador de elemento de bloque

--- a/Proyecto_Web_Ventas/estilos/style.css
+++ b/Proyecto_Web_Ventas/estilos/style.css
@@ -111,3 +111,9 @@ h3{
     text-align: center;
     font-size: 2.2rem;
 }
+
+/* Header */
+.header{
+    display: flex; /*Para que el contenido sea flexible*/
+    justify-content: center; /*Justifica el contenido al centro*/
+}
