--- a/Proyecto_Web_Ventas/estilos/style.css
+++ b/Proyecto_Web_Ventas/estilos/style.css
@@ -117,3 +117,27 @@ h3{
     display: flex; /*Para que el contenido sea flexible*/
     justify-content: center; /*Justifica el contenido al centro*/
 }
+
+.header__logo{
+    margin: 3rem 0;
+}
+
+/* Navegacion */
+.navegacion{
+    background-color: var(--primarioOscuro);
+    padding: 1rem 0;
+    display: flex; /*hacer felxible al elemento*/
+    justify-content: center; /*Justifica el contenido al centro*/
+    gap: 3rem;
+}
+
+.navegacion__enlace{
+    font-family: var(--fuentePrincipal);
+    color: var(--blanco);
+    font-size: 3rem; /*1 rem = 10px*/
+}
+
+.navegacion__enlace--activo,
+.navegacion__enlace:hover{
+    color: var(--secundario);
+}
