--- a/Proyecto_Web_Ventas/estilos/style.css
+++ b/Proyecto_Web_Ventas/estilos/style.css
@@ -118,6 +118,20 @@ h3{
     justify-content: center; /*Justifica el contenido al centro*/
 }
 
+
+/* Footer */
+.footer{
+    background-color: var(--primarioOscuro);
+    padding: 1rem 0;
+    margin-top: 2rem;
+}
+
+.footer__texto{
+    font-family: var(--fuentePrincipal);
+    text-align: center;
+    font-size: 2.2rem;
+}
+
 .header__logo{
     margin: 3rem 0;
 }
