--- a/Proyecto_Web_Ventas/estilos/style.css
+++ b/Proyecto_Web_Ventas/estilos/style.css
@@ -142,13 +142,16 @@ h3{
     padding: 1rem 0;
     display: flex; /*hacer felxible al elemento*/
     justify-content: center; /*Justifica el contenido al centro*/
-    gap: 3rem;
+    gap: 3rem; /*Separación forma nueva*/
 }
+
+
 
 .navegacion__enlace{
     font-family: var(--fuentePrincipal);
     color: var(--blanco);
     font-size: 3rem; /*1 rem = 10px*/
+    
 }
 
 .navegacion__enlace--activo,
