--- a/Proyecto_Web_Ventas/estilos/style.css
+++ b/Proyecto_Web_Ventas/estilos/style.css
@@ -158,3 +158,29 @@ h3{
 .navegacion__enlace:hover{
     color: var(--secundario);
 }
+
+/*Inicio Producto */
+.producto{
+
+}
+
+.producto__imagen{
+
+}
+
+.producto__informacion{
+
+}
+
+.producto__nombre{
+
+}
+
+.producto__precio{
+
+}
+
+/* Fin producto */
+
+
+
