--- a/Proyecto_Web_Ventas/estilos/style.css
+++ b/Proyecto_Web_Ventas/estilos/style.css
@@ -164,6 +164,7 @@ h3{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     /* margin-left: 100px; */
+    gap: 2rem;
 }
 
 @media (min-width: 768px ){
