--- a/Proyecto_Web_Ventas/estilos/style.css
+++ b/Proyecto_Web_Ventas/estilos/style.css
@@ -205,4 +205,35 @@ h3{
 /* Fin producto */
 
 
+/* inicio Graficos */
+
+.grafico{
+    min-height: 30rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    grid-column: 1 / 3;
+}
+
+.grafico--camisas{
+    grid-row: 2 / 3;
+    background-image: url(../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/grafico1.jpg);
+}
+
+.grafico--node{
+    background-image: url(../Imagenes/FrontEndStore_inicio/FrontEndStore_inicio/img/grafico2.jpg);
+    grid-template-columns: 1 / 3;
+    grid-row:  8 / 9;
+}
+
+@media (min-width: 768px){
+    .grafico--node{
+        grid-row: 5 / 6;
+        grid-column: 2 / 4;
+    }
+}
+    
+/* Fin Graficos */
+
+
+
 
