Creando la pagina de nosotros

--- a/Proyecto_Web_Ventas/estilos/style.css
+++ b/Proyecto_Web_Ventas/estilos/style.css
@@ -235,5 +235,21 @@ h3{
 /* Fin Graficos */
 
 
+/* Inicio Nosotros */
+.nosotros{
+
+}
+
+.nosotros__contenido{
+
+}
+
+.nosotros__imagen{
+    
+}
+
+/* Fin Nosotros */
+
+
 
 
