--- a/Proyecto_Web_Ventas/estilos/style.css
+++ b/Proyecto_Web_Ventas/estilos/style.css
@@ -309,17 +309,18 @@ h3{
 .formulario{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
 }
 
 .formulario__campo {
     /* border-color: var(--primarioOscuro);
     border-width: 1rem;
     border-style: solid; */
-
+    
     border: 1rem solid var(--primarioOscuro);
-    background-color: transparent;
-    color: var(--blanco);
+    /* color: var(--blanco); */
     font-size: 2rem;
+    background-color: transparent;
     font-family: Arial, Helvetica, sans-serif;
     padding: 1rem;
     appearance: none;
@@ -332,6 +333,7 @@ h3{
     font-family: var(--fuentePrincipal);
     padding: 2rem;
     transition: background-color .3s ease;
+    grid-column: 1 / 3;
 }
 
 .formulario__submit:hover{
