Aplicando display grid - practicas

--- a/PatronesRWD/01-2columnas_iguales_css_grid/css/styles.css
+++ b/PatronesRWD/01-2columnas_iguales_css_grid/css/styles.css
@@ -39,3 +39,11 @@ h1 {
 }
 
 /** CODIGO AQUI **/
+
+@media (min-width: 768px) {
+    .dos-columnas{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        column-gap: 2rem;
+    }
+}
