--- a/PatronesRWD/05-3columnas_css_grid/css/styles.css
+++ b/PatronesRWD/05-3columnas_css_grid/css/styles.css
@@ -49,3 +49,23 @@ p {
 
 
 /** CODIGO AQUI **/
+
+@media (min-width: 768px) {
+    .contenedor-grid{
+        display: grid;
+        grid-template-areas: "izquierda contenido derecha";
+        grid-template-columns: 1fr 3fr 1fr;
+        grid-auto-flow: column;
+        column-gap: 2rem;
+    }
+
+    .contenido-principal{
+        /* grid-column: 2 / 3; */
+        grid-area: contenido;
+    }
+
+    .saidbar-1{
+        /* grid-column: 1 / 2; */
+        grid-area: izquierda;
+    }
+}
