--- a/PatronesRWD/07-column_drop_css_grid/css/styles.css
+++ b/PatronesRWD/07-column_drop_css_grid/css/styles.css
@@ -50,3 +50,35 @@ p {
 
 
 /** CODIGO AQUI **/
+
+@media (min-width: 480px){
+    .column-drop-css{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem; /*para teer separacion*/
+    } 
+    .primera{
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    
+    .segunda{
+        grid-column: 1 / 3;
+        grid-row: 1 / 3;
+    }
+}
+
+@media (min-width: 768px){
+    .column-drop-css{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .primera{
+        grid-row: unset;
+        grid-column: 2 / 3;
+    }
+
+    .segunda{
+        grid-column: 3 / 4;
+        grid-row: unset;
+    }
+}
