--- a/PatronesRWD/08-column_drop_flexbox/css/styles.css
+++ b/PatronesRWD/08-column_drop_flexbox/css/styles.css
@@ -48,3 +48,25 @@ p {
 }
 
 /** CODIGO AQUI **/
+
+@media (min-width: 480px){
+    .column-drop-flex{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }  
+    
+    .contenido-principal,
+    .primera{
+        flex-basis: calc(50% - 1rem);
+    }
+}
+
+@media (min-width: 768px){
+    .contenido-principal,
+    .primera,
+    .segunda{
+        flex: 0 0 calc(33.3% - 2rem);
+        /* gap: 2rem; */
+    }
+}
