--- a/PatronesRWD/09-con_sidebar_css_grid/css/styles.css
+++ b/PatronesRWD/09-con_sidebar_css_grid/css/styles.css
@@ -48,3 +48,22 @@ p {
 }
 
 /** CODIGO AQUI **/
+
+@media (min-width: 768px){
+    .con-sidebar{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        column-gap: 4rem;
+    }
+
+    aside{
+        grid-template-columns: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+    article{
+        grid-column: 2 / 3;
+    }
+
+    
+}
