--- a/PatronesRWD/13-mostly_fluid/css/styles.css
+++ b/PatronesRWD/13-mostly_fluid/css/styles.css
@@ -38,7 +38,7 @@ p {
 
 /** CODIGO AQUI **/
 
-h1{
+/* h1{
     text-align: center;
     font-size: 3rem;
 }
@@ -48,4 +48,26 @@ h1{
         font-size: 6rem;
         text-align: left;
     }
+} */
+
+.contenedor{
+    max-width: 120rem;
+    width: 95%;
+    margin: 0 auto;
+}
+
+@media (min-width: 768){
+    .contenedor{
+        width: 80%;
+    }
+}
+
+@media (min-width: 992px){
+    .contenedor{
+        width: 60%;
+    }
+}
+
+img{
+    max-width: 100%;
 }
