--- a/Blog de cafe/css/estilos.css
+++ b/Blog de cafe/css/estilos.css
@@ -83,3 +83,44 @@ img{
     color: var(--blanco);
     margin-top: 5rem;
 }
+
+@media (min-width: 768px){
+    .header__texto{
+        margin-top: 20rem;
+    }
+}
+
+@media (min-width: 768px){
+    .barra{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.logo{
+    color: var(--blanco);
+}
+
+.logo__nombre{
+    font-weight: 400;
+}
+
+.logo__bold{
+    font-weight: 700;
+}
+
+@media (min-width: 768px){
+    .navegacion{
+        display: flex;
+        gap: 2rem;
+    }
+}
+
+.navegacion__enlace{
+    display: block;
+    text-align: center;
+    font-size: 1.8rem;
+    color: var(--blanco);
+}
+    
