--- a/Blog de cafe/css/estilos.css
+++ b/Blog de cafe/css/estilos.css
@@ -124,3 +124,10 @@ img{
     color: var(--blanco);
 }
     
+@media (min-width: 768px){
+    .contenido-principal{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
+}
