--- a/Blog de cafe/css/estilos.css
+++ b/Blog de cafe/css/estilos.css
@@ -4,6 +4,7 @@
     --primario: #784D3c;
     --blanco: #ffffff;
     --negro: #000000;
+    --gris: #e1e1e1;
 }
 
 html{
@@ -130,4 +131,36 @@ img{
         grid-template-columns: 2fr 1fr;
         column-gap: 4rem;
     }
+}
+
+.entrada{
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+
+.entrada:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+
+.boton{
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px){
+    .boton{
+        display: inline-block;
+    }
+}
+
+.boton--primario{
+    background-color: var(--negro);
 }
