footer  - (finalizado) - Creando la parte de nosotros

--- a/Blog de cafe/css/estilos.css
+++ b/Blog de cafe/css/estilos.css
@@ -26,6 +26,7 @@ body{
 .contenedor{
     max-width: 120rem;
     width: 90%;
+    /* width: min(90%, 120rem); */
     margin: 0 auto;
 }
 
@@ -90,6 +91,10 @@ img{
     .header__texto{
         margin-top: 20rem;
     }
+}
+
+.barra{
+    padding: 4rem;
 }
 
 @media (min-width: 768px){
@@ -196,5 +201,11 @@ img{
 .widget-curso__label
 .widget-curso__info{
     font-size: 2rem;
+}
+
+.footer{
+    background-color: var(--negro);
+    padding-bottom: 3rem;
+    margin-top: 4rem;
 }
 
