Creando seccion de cursos

--- a/Blog de cafe/css/estilos.css
+++ b/Blog de cafe/css/estilos.css
@@ -209,3 +209,19 @@ img{
     margin-top: 4rem;
 }
 
+
+/* Sobre nosotros */
+@media (min-width: 768px){
+    .sobre-nosotros{
+        display: flex;
+        gap: 2rem;
+    }
+
+    .sobre-nosotros__imagen,
+    .sobre-nosotros__texto{
+        flex-basis: 50%;
+    }
+}
+
+
+
