Creando la pagina de entradas a blog

--- a/Blog de cafe/css/estilos.css
+++ b/Blog de cafe/css/estilos.css
@@ -223,5 +223,22 @@ img{
     }
 }
 
+.curso{
+    padding: 3rem;
+    border: 1px solid var(--gris);
+}
+
+@media (min-width: 768px){
+    .curso{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 2rem;
+    }
+}
+
+.curso:last-of-type{
+    border: none;
+}
+
 
 
